--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "node": ">=18.17.0"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "openai": "^4.47.1",
     "uuid": "^9.0.1"
   }
 }
