--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "lucide-react": "^0.379.0",
     "openai": "^4.47.1",
     "uuid": "^9.0.1"
   }
