--- a/packages/nextjs/.eslintrc.json
+++ b/packages/nextjs/.eslintrc.json
@@ -5,12 +5,6 @@
     "@typescript-eslint/no-unused-vars": ["off"],
     "@typescript-eslint/no-explicit-any": ["off"],
     "@typescript-eslint/ban-ts-comment": ["off"],
-    "react/no-unescaped-entities": ["off"],
-    "prettier/prettier": [
-      "warn",
-      {
-        "endOfLine": "auto"
-      }
-    ]
+    "react/no-unescaped-entities": ["off"]
   }
 }
