feat: update eth deploy scripts

--- a/packages/hardhat/.env.example
+++ b/packages/hardhat/.env.example
@@ -9,3 +9,13 @@
 ALCHEMY_API_KEY=
 DEPLOYER_PRIVATE_KEY=
 ETHERSCAN_API_KEY=
+
+# Chainlink
+SEPOLIA_LINK_ADDRESS=0x779877A7B0D9E8603169DdbD7836e478b4624789
+AMOY_ROUTER_ADDRESS=0x9C32fCB86BF0f4a1A8921a9Fe46de3198bb884B2
+SEPOLIA_ROUTER_ADDRESS=0x0BF3dE8c5D3e8A2B34D2BEeB17ABfCeBaf363A59
+
+# This address must be updated each time DestinationMinter SC is deployed
+POLYGON_MINTER_ADDRESS=
+# Test user address to get extra info when scripts are executed (ie: deployer address)
+TEST_USER_ADDRESS=
